--- a/performances.html
+++ b/performances.html
@@ -36,7 +36,7 @@
 
 	<br>
 
-	<h1 id = "performancesHeading">PERFORMANCES</h1>
+	<h1 id = "performancesHeading" class = "heading">PERFORMANCES</h1>
 	<div class = "description">
 		<h3>My performances at various concerts and competitions</h3>
 		<a href="https://www.youtube.com/channel/UC7yNY3Pla4gboKdtLUVT_iQ" target = "_blank">View on Youtube</a>
