--- a/reeds.html
+++ b/reeds.html
@@ -57,7 +57,7 @@
 
 	<br>
 
-	<h1 id = "reedsHeading">BUY REEDS</h1>
+	<h1 id = "reedsHeading" class = "heading">BUY REEDS</h1>
 
 	<h2 style = "text-align:center">High quality reeds for a only $15 each.</h2>
 	<p style = "text-align:center"><i>In person delivery available in Salem, OR</i></p>
