Fixed action address in form html

--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
 
 	<p> this doesn't work yet don't type anything</p>
 
-	<form action = "contactform.php" name = "contactform" method = "post">
+	<form action = "php/contactForm.php" name = "contactform" method = "post">
 		<div class = "shortAnswer">
 			<input type = "text" name = "firstName" placeholder = "First name" required>
 			<input type = "text" name = "lastName" placeholder = "Last name" required>
