--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	</div>
 	<img id = menuicon src = "img/menuicon.png">
 	<h1 id = "welcome">WELCOME</h1>
-	<h1>TODO: <br>make contact form functional and responsive<br>make mobile version</h1>
+	<h1>TODO: <br>make contact form functional and responsive<br>make mobile version<br>fix li:hover size<br>fix hamburger menu hover-off</h1>
 	<img id = "name" src = "img/signature.png">
 	<script src = "js/navBar.js"></script>
 
