Removed TODO from site and made it a comment on index.html

--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
 	</div>
 	<img id = menuicon src = "img/menuicon.png">
 	<h1 id = "welcome">WELCOME</h1>
-	<h1>TODO: <br>make contact form functional and responsive<br>make mobile version<br>fix li:hover size<br>fix hamburger menu hover-off</h1>
+	<!-- TODO: make contact form functional and responsive
+	responsive design
+	fix li:hover size
+	fix hamburger menu hover-off
+ 	-->
 	<img id = "name" src = "img/signature.png">
 	<script src = "js/navBar.js"></script>
 
