Another possible fix for below

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 		</ul>
 	</div>
-	<img id = menuicon src = "img/menuicon.png">
+	<img id = "menuicon" src = "img/menuicon.png">
 	<h1 id = "welcome">WELCOME</h1>
 	<!-- TODO: make contact form functional and responsive
 	responsive design
