Entire animation for one year!

--- a/celebration.html
+++ b/celebration.html
@@ -4,11 +4,36 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Title</title>
   <link rel = "stylesheet" href = "css/bknd.css">
-	<link rel = "stylesheet" href = "css/oneyear.css">
+	<link rel = "stylesheet" href = "css/celebration.css">
 </head>
-<body>
+<body onload = "main()">
+
+	<div class="caps">
+		<h1 id = "text" class = "heading">Hi</h1>
+		<h1 id = "caption">how it all started</h3>
+	</div>
+
+	<br><br><br>
+
+	<div id="imgs1">
+		<img id = "img1x1" src="img/year/walkingruby.jpeg" alt="walking ruby">
+	</div>
+
+	<div id="imgs2">
+		<img id = "img2x1" src="img/year/walkingruby.jpeg" alt="walking ruby">
+		<img id = "img2x2" src="img/year/friendsoffelines.jpeg" alt="friends of felines">
+	</div>
+
+	<div id="imgs3">
+		<img id = "img3x1" src="img/year/walkingruby.jpeg" alt="walking ruby">
+		<img id = "img3x2" src="img/year/friendsoffelines.jpeg" alt="friends of felines">
+		<img id = "img3x3" src="img/year/walkingruby.jpeg" alt="walking ruby">
+	</div>
 
 
+	<br><br><br>
+	<p id = "clicktoreplay"><em>click to replay</em></p>
 
+  <script src = "js/celebration.js"></script>
 </body>
 </html>
