--- a/happyoneyear.html
+++ b/happyoneyear.html
@@ -25,6 +25,10 @@
 	<img id = menuicon src = "img/menuicon.png">
 
   <h1 class = "heading">HAPPY ONE YEAR</h1>
+  <br><br><br><br><br><br>
+  <div class="celebration">
+    <a id = "celebrationlink" href="celebration.html">Click me</a>
+  </div>
 
 <script src = "js/navbar.js"></script>
 
