--- a/celebration.html
+++ b/celebration.html
@@ -9,7 +9,7 @@
 <body onload = "main()">
 
 	<div class="caps">
-		<h1 id = "text" class = "heading">Hi</h1>
+		<h1 id = "text">Hi</h1>
 		<h1 id = "caption">how it all started</h3>
 	</div>
 
@@ -32,7 +32,7 @@
 
 
 	<br><br><br>
-	<p id = "clicktoreplay"><em>click to replay</em></p>
+	<p id = "clicktoreplay"><em>refresh to replay</em></p>
 
   <script src = "js/celebration.js"></script>
 </body>
