--- a/celebration.html
+++ b/celebration.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Title</title>
-  <link rel = "stylesheet" href = "css/bknd.css">
+	<title>Happy One Year:)</title>
+  <!-- <link rel = "stylesheet" href = "css/bknd.css"> -->
 	<link rel = "stylesheet" href = "css/celebration.css">
 </head>
 <body onload = "main()">
