--- a/celebration.html
+++ b/celebration.html
@@ -32,7 +32,7 @@
 
 
 	<br><br><br>
-	<p id = "clicktoreplay"><em>refresh to replay</em></p>
+	<p id = "date"><em>time flies when you're having fun ;)<br>11/15</em></p>
 
   <script src = "js/celebration.js"></script>
 </body>
