added intonation practice and adjusted links accordingly

--- a/reeds.html
+++ b/reeds.html
@@ -46,7 +46,7 @@
 			<div class = "dropdown-content">
 				<a href = "bassoonZone.html">Bassoon Zone</a>
 				<a href = "performances.html">Performances</a>
-        <a href = "reeds.html">Reeds</a>
+        <a href = "misc.html">Misc</a>
 		</li>
 		<li class = "rightSide" id = "menuIconLi">	<img id = menuiconWhite src = "img/menuiconwhite.png"> </li>
 		<li class = "rightSide"><a href = "contact.html">Contact Me</a></li>
