--- a/music.html
+++ b/music.html
@@ -24,14 +24,14 @@
 			<div class = "dropdown-content">
 				<a href = "bassoonZone.html">Bassoon Zone</a>
 				<a href = "performances.html">Performances</a>
-        <a href = "reeds.html">Reeds</a>
+        <a href = "misc.html">Misc</a>
 		</li>
 		<li class = "rightSide" id = "menuIconLi">	<img id = menuiconWhite src = "img/menuiconwhite.png"> </li>
 		<li class = "rightSide"><a href = "contact.html">Contact Me</a></li>
 		<li class = "rightSide"><a href = "aboutMe.html">About Me</a></li>
 	</ul>
 	<img id = menuicon src = "img/menuicon.png">
-	
+
 <br>
 
 	<table class = "musicMenu">
@@ -47,7 +47,7 @@
 		</tr>
 		<tr class = "musicMenu">
 			<td>
-				<a href="reeds.html" class="musicMenu" id = "reeds">REEDS</a>
+				<a href="reeds.html" class="musicMenu" id = "reeds">MISC</a>
 			</td>
 		</tr>
 	</table>
