small changes to intonation practice

--- a/intonationpractice.html
+++ b/intonationpractice.html
@@ -24,11 +24,12 @@
 	</ul>
 	<img id = menuicon src = "img/menuicon.png">
 
-  <br><br><br><br>
 
-  <h1>Intonation Practice</h1>
+  <h1 class = "heading">Intonation Practice</h1>
   <p>Plays the tonic and fifth, changing with the music.</p>
+  <p>takes a second to load, click on the play button and when it stops showing "0:00" it's ready </p>
   <p>playback speed adjustment to come</p>
+  <br>
   <p>Milde Scale Study no. 24 Op. 24, 96bpm</p>
   <div class="audio-container">
     <audio controls>
